crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_029.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 201869
    entity_type: InteractiveZone
    position:
      x: -442.53851318359375
      y: 0
      z: 5.232100009918213
    props:
      componentsState:
        captureLogic:
          bothInside: 0
          captureSpeed: 1
          captureTime: 45
          hasInvaders: 0
          invaderTeam: -1
          isEnabled: 0
          isVisible: 0
          progress: 0
        controlPoint:
          buoyVisualId: 4293248944
          index: 0
          nextControlPoint: -1
          timerName: []
          type: 1
      innerRadius: 0
      interactionBuoyancies:
        - 0
      name:
        - 48
        - 65
        - 57
        - 49
        - 54
        - 51
        - 56
        - 48
        - 46
        - 52
        - 48
        - 49
        - 68
        - 52
        - 67
        - 65
        - 57
        - 46
        - 49
        - 49
        - 48
        - 66
        - 53
        - 51
        - 57
        - 69
        - 46
        - 51
        - 70
        - 65
        - 69
        - 66
        - 52
        - 52
        - 70
      ownerId: 0
      radius: 233
      teamId: 1
      type: 9
      useRing: 0
      visualState:
        forAllies: 0
        forEnemies: 0
        forOwner: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 14
    state_length: 101
    vehicle_id: 2840
