crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_038.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 201868
    entity_type: InteractiveZone
    position:
      x: -332.5119934082031
      y: 0
      z: 184.30799865722656
    props:
      componentsState:
        captureLogic:
          bothInside: 0
          captureSpeed: 1
          captureTime: 40
          hasInvaders: 0
          invaderTeam: -1
          isEnabled: 0
          isVisible: 0
          progress: 0
        controlPoint:
          buoyVisualId: 4293248944
          index: 1
          nextControlPoint: -1
          timerName: []
          type: 1
      innerRadius: 0
      interactionBuoyancies:
        - 0
      name:
        - 50
        - 48
        - 48
        - 57
        - 70
        - 69
        - 57
        - 57
        - 46
        - 52
        - 68
        - 51
        - 65
        - 57
        - 56
        - 68
        - 54
        - 46
        - 52
        - 70
        - 65
        - 69
        - 70
        - 69
        - 57
        - 55
        - 46
        - 51
        - 69
        - 48
        - 69
        - 50
        - 49
        - 54
        - 70
      ownerId: 0
      radius: 66
      teamId: 1
      type: 9
      useRing: 0
      visualState:
        forAllies: 0
        forEnemies: 0
        forOwner: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 14
    state_length: 101
    vehicle_id: 2840
