crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_039.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 201874
    entity_type: InteractiveZone
    position:
      x: 87.75920104980469
      y: 0
      z: -174.7039031982422
    props:
      componentsState:
        captureLogic:
          bothInside: 0
          captureSpeed: 1
          captureTime: 45
          hasInvaders: 0
          invaderTeam: -1
          isEnabled: 0
          isVisible: 0
          progress: 0
        controlPoint:
          buoyVisualId: 4293248944
          index: 4
          nextControlPoint: -1
          timerName: []
          type: 1
      innerRadius: 0
      interactionBuoyancies:
        - 0
      name:
        - 49
        - 67
        - 67
        - 66
        - 52
        - 55
        - 49
        - 67
        - 46
        - 52
        - 66
        - 69
        - 68
        - 52
        - 70
        - 49
        - 52
        - 46
        - 66
        - 54
        - 54
        - 68
        - 69
        - 56
        - 56
        - 66
        - 46
        - 52
        - 48
        - 66
        - 51
        - 52
        - 68
        - 54
        - 65
      ownerId: 0
      radius: 200
      teamId: 1
      type: 9
      useRing: 0
      visualState:
        forAllies: 0
        forEnemies: 0
        forOwner: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 14
    state_length: 101
    vehicle_id: 2840
