crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_040.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 433427
    entity_type: Building
    position:
      x: -88.82569885253906
      y: 0.25220000743865967
      z: 727.9155883789063
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds: []
      antiAirAuras: []
      burningFlags: 0
      debugText: []
      effects: []
      hasAirTargetsInRange: 0
      health: 30000
      isAlive: 1
      isAntiAirMode: 0
      isSuppressed: 0
      maxHealth: 30000
      paramsId: 4293884848
      regeneratedHealth: 0
      regenerationHealth: 0
      sounds: []
      state:
        atba:
          atbaTargets: []
      targetPos:
        - -100000
        - -100000
        - -100000
      teamId: 0
      weatherParams:
        AAMaxDist: 1
        GMIdealRadius: 1
        GSIdealRadius: 1
        GSMIdealRadius: 1
        airDefenseVisibilityTime: 2
        bad: 0
        burnDamage: 1
        burnTime: 1
        maxPlaneVisionDistance: 2000
        maxShipVisionDistance: 2000
        maxVisibilityDistance: 2000
        maxVisibilityDistanceByPlane: 2000
        mgVisibilityTime: 20
        planeMaxVisibilityDistance: 2000
        planeMaxVisibilityDistanceByPlane: 2000
        planeSpeed: 1
        planeVisibilityFactor: 1
        planeVisibilityFactorByPlane: 1
        shootShift: 1
        speedCoef: 1
        transparency: 1
        visibilityFactor: 1
        visibilityFactorByPlane: 1
    rotation:
      pitch: 0
      roll: 0
      yaw: -0.06565015763044357
    space_id: 0
    spec_idx: 9
    state_length: 163
    vehicle_id: 2840
